--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,17 +24,25 @@
             android:layout_marginBottom="20dp"
             android:layout_marginTop="25dp"
             android:gravity="center_horizontal"
-            android:text="Welcome from "
+            android:text="Wedding Invitation"
             android:textColor="@color/white"
-            android:textSize="28sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
+
+        <View
+            android:id="@+id/vw"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_below="@+id/title"
+            android:layout_marginBottom="5dp"
+            android:background="@color/white" />
 
 
         <LinearLayout
             android:id="@+id/ll_photos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/title"
+            android:layout_below="@+id/vw"
             android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
 
@@ -161,13 +169,58 @@
 
         </LinearLayout>
 
+        <!--welcome message-->
+        <android.support.v7.widget.CardView
+            android:id="@+id/welcome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/bond"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="20dp"
+            android:elevation="8dp"
+            app:cardBackgroundColor="#60ffffff">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <com.app.weddingjmnew.Utils.TextViewWithFont
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
+                    android:padding="16dp"
+                    android:text="I welcome you to love To make my day special And unforgettable."
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
+                    android:paddingBottom="16dp"
+                    android:text="18 Feb 2018"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
         <!--layout one horizantal contaimn two-->
         <LinearLayout
             android:id="@+id/ll_menu1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/bond"
-            android:layout_marginTop="20dp"
+            android:layout_below="@+id/welcome"
+
             android:orientation="horizontal">
 
 
@@ -237,20 +290,18 @@
         <!--layout three horizantal contaimn two-->
         <LinearLayout
             android:id="@+id/ll_menu2"
-            android:layout_below="@+id/ll_menu1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_menu1"
             android:orientation="horizontal">
-
-
 
             <LinearLayout
                 android:id="@+id/ll_maps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:layout_weight="1"
                 android:background="@drawable/borderbgshadow"
                 android:orientation="vertical"
@@ -280,10 +331,10 @@
                 android:id="@+id/ll_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 android:layout_weight="1"
                 android:background="@drawable/borderbgshadow"
                 android:orientation="vertical"
@@ -316,8 +367,9 @@
             android:id="@+id/cv_countdownViewTest21"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:layout_below="@+id/ll_menu2"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
             android:layout_marginTop="20dp"
             app:isHideTimeBackground="false"
             app:isShowDay="true"
@@ -329,15 +381,19 @@
             app:isTimeTextBold="true"
             app:suffixGravity="center"
             app:suffixTextColor="#000000"
-            android:layout_marginBottom="16dp"
             app:suffixTextSize="20sp"
             app:timeBgColor="#482f28"
-            android:layout_below="@+id/ll_menu2"
             app:timeBgRadius="22.5dp"
             app:timeBgSize="45dp"
             app:timeTextColor="#FFFFFF"
-            app:timeTextSize="25sp"/>
+            app:timeTextSize="25sp" />
 
-
+        <View
+            android:id="@+id/bt"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_below="@+id/title"
+            android:layout_marginBottom="5dp"
+            android:background="@color/white" />
     </RelativeLayout>
 </ScrollView>
