--- a/app/src/main/res/layout/groom_layout.xml
+++ b/app/src/main/res/layout/groom_layout.xml
@@ -221,6 +221,7 @@
 
 
             <LinearLayout
+                android:id="@+id/ll_guest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
