--- a/app/src/main/res/layout/event_layout.xml
+++ b/app/src/main/res/layout/event_layout.xml
@@ -13,17 +13,45 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.app.weddingjmnew.Utils.TextViewWithFont
-            android:id="@+id/title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="25dp"
-            android:gravity="center_horizontal"
-            android:text="Events"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/back" />
+
+
+            <com.app.weddingjmnew.Utils.TextViewWithFont
+                android:id="@+id/title"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+
+                android:text="Events"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/home" />
+
+
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
