--- a/app/src/main/res/layout/maps_layout.xml
+++ b/app/src/main/res/layout/maps_layout.xml
@@ -5,17 +5,43 @@
     android:background="@drawable/borderbg_main"
     android:orientation="vertical"
     android:layout_height="match_parent">
-    <com.app.weddingjmnew.Utils.TextViewWithFont
-        android:id="@+id/title"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="25dp"
-        android:gravity="center_horizontal"
-        android:text="Location"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="10dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/back" />
+
+
+        <com.app.weddingjmnew.Utils.TextViewWithFont
+            android:id="@+id/title"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Location"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="10dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/home" />
+
+
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
